Adjusted footer size to avoid overlapping

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -51,7 +51,6 @@ button:hover {
   position: fixed;
   bottom: 0;
   left: 0;
-  right: 0;
 
   padding: 5px;
 
